force-app/main/default/objects/Partner_Agreement__c/Partner_Agreement__c.object-meta.xml
<CustomObject>
    <label>Partner Agreement</label>
    <nameField>
        <displayFormat>PA-{MM}-{YYYY}-{000}</displayFormat>
        <label>PA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>