force-app/main/default/objects/Partner_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Harbor Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Harbor Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Tumblers</fullName>
            </value>
            <value>
                <fullName>Reusable CamLids and Store Racks</fullName>
            </value>
            <value>
                <fullName>Tumblers</fullName>
            </value>
            <value>
                <fullName>Vizient Harbor Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Vizient Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Vizient Tumblers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>