force-app/main/default/objects/Partner_Agreement__c/fields/Cambro_Rep_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cambro_Rep_Comments__c</fullName>
    <label>Cambro Rep Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>