force-app/main/default/objects/Partner_Agreement__c/fields/Cambro_Rep_Company__c.field-meta.xml
<CustomField>
    <fullName>Cambro_Rep_Company__c</fullName>
    <label>Cambro Rep Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>