force-app/main/default/objects/Partner_Agreement__c/fields/Cambro_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Cambro_Rep_Email__c</fullName>
    <label>Cambro Rep Email</label>
    <type>Email</type>
</CustomField>