force-app/main/default/objects/Partner_Agreement__c/fields/Cambro_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Cambro_Rep_Name__c</fullName>
    <label>Cambro Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>