force-app/main/default/objects/Partner_Agreement__c/fields/Conga_Tester__c.field-meta.xml
<CustomField>
    <fullName>Conga_Tester__c</fullName>
    <formula>/*Conga_Tumblers_Query__c  Conga_Reusable_Camlids_Query__c Conga_Mugs_Bowls_Query__c 
HYPERLINK(&quot;https://workflow.congamerge.com/?SessionId=&quot;
+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 +  Conga_Mugs_Bowls_Query__c  , &quot;Test Conga Workflow via UI&quot;)
*/
HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; 
+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 +Conga_Tumblers_Query__c   , &quot;Test Conga Workflow via UI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Tester</label>
    <type>Text</type>
</CustomField>