force-app/main/default/objects/Partner_Agreement__c/fields/Conga_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Conga_Troubleshooting__c</fullName>
    <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot;
+  $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Conga_Mug_Bowls__c
, &quot;Conga TroubleShooting&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Troubleshooting</label>
    <type>Text</type>
</CustomField>