force-app/main/default/objects/Partner_Agreement__c/fields/Conga_Tumblers__c.field-meta.xml
<CustomField>
    <fullName>Conga_Tumblers__c</fullName>
    <description>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[PAwP]00OF0000006ndAz&quot; +
&quot;&amp;templateid=a0yF0000006NJ6J&quot; +
&quot;&amp;congaemailtemplateid=a0pF0000006JSYS&quot; +
&quot;&amp;emailadditionalto=&quot; + Cambro_Rep_Email__c +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;qmode=SendEmail&quot;</description>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[PAwP]00OF0000006ndAz&quot; +
&quot;&amp;templateid=a0yF0000006NJ6J&quot; +
&quot;&amp;congaemailtemplateid=a0pF0000006JSYS&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;qmode=Sertifi&quot;+
&quot;&amp;SertifiCustomSettings=Settings&quot;+
&quot;&amp;SertifiVisible=1&quot;+
&quot;&amp;SertifiEmailTo=&quot;+ Customer_Email__c +
&quot;&amp;SertifiSigner1Email=&quot;+Customer_Email__c+
&quot;&amp;SertifiSigner2Email=&quot;+&quot;mczarnik@cambro.com&quot;+
&quot;&amp;SertifiCCSignerEmail=&quot; + Cambro_Rep_Email__c+
&quot;&amp;SertifiFileName=&quot;+Facility_Name__c+&quot;&quot;+Name</formula>
    <label>Conga: Tumblers</label>
    <type>Text</type>
</CustomField>