force-app/main/default/objects/Partner_Agreement__c/fields/Conga_Tumblers_Query__c.field-meta.xml
<CustomField>
    <fullName>Conga_Tumblers_Query__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;QueryId=[PAwP]a0q5A00000CJJtFQAX,[PARTNERAGREEMENT]a0q5A00000CJJtKQAX&quot; + 
&quot;&amp;templateid=a0y5A00000AcVULQA3&quot; +
&quot;&amp;congaemailtemplateid=a0pF0000006JSYS&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;SertifiCustomSettings=Settings&quot;+
&quot;&amp;SertifiVisible=1&quot;+
&quot;&amp;SertifiEmailTo=&quot;+ Customer_Email__c +
&quot;&amp;SertifiSigner1Email=&quot;+Customer_Email__c+
&quot;&amp;SertifiSigner2Email=&quot;+&quot;mczarnik@cambro.com&quot;+
&quot;&amp;SertifiCCSignerEmail=&quot; + Cambro_Rep_Email__c+
&quot;&amp;SertifiFileName=&quot;+Facility_Name__c+&quot;&quot;+Name+
&quot;&amp;qmode=Sertifi&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga: Tumblers Query</label>
    <type>Text</type>
</CustomField>