force-app/main/default/objects/Partner_Agreement__c/fields/Customer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fax__c</fullName>
    <label>Customer Fax</label>
    <type>Phone</type>
</CustomField>