force-app/main/default/objects/Partner_Agreement__c/fields/Customer_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Title__c</fullName>
    <label>Customer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>