force-app/main/default/objects/Partner_Agreement__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Purchase_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>