force-app/main/default/objects/Partner_Agreement__c/fields/Distributor_City__c.field-meta.xml
<CustomField>
    <fullName>Distributor_City__c</fullName>
    <label>Distributor City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>