force-app/main/default/objects/Partner_Agreement__c/fields/Distributor_Sales_Rep_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sales_Rep_E_mail__c</fullName>
    <label>Distributor Sales Rep E-mail</label>
    <type>Email</type>
</CustomField>