force-app/main/default/objects/Partner_Agreement__c/fields/Distributor_State__c.field-meta.xml
<CustomField>
    <fullName>Distributor_State__c</fullName>
    <label>Distributor State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>