force-app/main/default/objects/Partner_Agreement__c/fields/Distributor_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Street_Address__c</fullName>
    <label>Distributor Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>