force-app/main/default/objects/Partner_Agreement__c/fields/Distributor_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Zip_Code__c</fullName>
    <label>Distributor Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>