force-app/main/default/objects/Partner_Agreement__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Purchase_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>