force-app/main/default/objects/Partner_Agreement__c/fields/Healthcare_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tim Sullivan                        tsullivan@cambro.com
Michael Rabakon              mrabakon@cambro.com
Wendy Gasior                    wgasior@cambro.com
Tucker Campbell               tcampbell@cambro.com</description>
    <label>Healthcare Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>