force-app/main/default/objects/Partner_Agreement__c/fields/Healthcare_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Specialist_Email__c</fullName>
    <formula>Healthcare_Specialist__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthcare Specialist Email</label>
    <type>Text</type>
</CustomField>