force-app/main/default/objects/Partner_Agreement__c/fields/Licensed_Beds__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Beds__c</fullName>
    <label>Licensed Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>