force-app/main/default/objects/Partner_Agreement__c/fields/PA_Sent_to_Rep__c.field-meta.xml
<CustomField>
    <fullName>PA_Sent_to_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is updated by Salesforce when the PA document is automatically sent when the record is created. This is only used for debugging purposes</inlineHelpText>
    <label>PA Sent to Rep</label>
    <type>Checkbox</type>
</CustomField>