force-app/main/default/objects/Partner_Agreement__c/fields/Renewal_Compliance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Compliance_Approval_Status__c</fullName>
    <description>Determines the status for renewal  PAs</description>
    <inlineHelpText>Renewal PA Compliance Check</inlineHelpText>
    <label>Renewal Compliance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Statuses_Generic</valueSetName>
    </valueSet>
</CustomField>