force-app/main/default/objects/Partner_Agreement__c/fields/Renewal_Compliance_Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Compliance_Exception_Status__c</fullName>
    <inlineHelpText>When not in compliance, the PA must be Approved for an exception</inlineHelpText>
    <label>Renewal Compliance Exception Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Statuses_Generic</valueSetName>
    </valueSet>
</CustomField>