force-app/main/default/objects/Partner_Agreement__c/fields/Room_Trays_Served__c.field-meta.xml
<CustomField>
    <fullName>Room_Trays_Served__c</fullName>
    <label>Room Trays Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>