force-app/main/default/objects/Partner_Agreement__c/fields/Send_to_Rep__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by the Rep. This sends the purchase agreement to the rep&#39;s supplied email address.</inlineHelpText>
    <label>Send to Rep</label>
    <type>Checkbox</type>
</CustomField>