force-app/main/default/objects/Partner_Agreement__c/fields/Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Request__c</fullName>
    <description>Indicates the PA being requested wants products outside the agreement type</description>
    <label>Special Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>