force-app/main/default/objects/Partner_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Facility_Name__c</columns>
    <columns>Licensed_Beds__c</columns>
    <columns>Room_Trays_Served__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Title__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Distributor_Sales_Rep_E_mail__c</columns>
    <columns>Renewal__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>