force-app/main/default/objects/Partner_Agreement__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Cambro_Rep_Comments__c</columns>
    <columns>Cambro_Rep_Company__c</columns>
    <columns>Cambro_Rep_Email__c</columns>
    <columns>Cambro_Rep_Name__c</columns>
    <columns>Distributor_Sales_Rep_E_mail__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>