force-app/main/default/objects/Partner_Agreement__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Facility_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending</label>
</ListView>