force-app/main/default/objects/Partner_Agreement__c/listViews/Shipped.listView-meta.xml
<ListView>
    <fullName>Shipped</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Facility_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Shipped</value>
    </filters>
    <label>Shipped</label>
</ListView>